--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,6 +76,7 @@
         "typeinfo": "cpp",
         "variant": "cpp",
         "__nullptr": "cpp",
-        "ios": "c"
+        "ios": "c",
+        "work_group_alloca.h": "c"
     }
 }
