--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,6 +77,7 @@
         "variant": "cpp",
         "__nullptr": "cpp",
         "ios": "c",
-        "work_group_alloca.h": "c"
+        "work_group_alloca.h": "c",
+        "filesystem": "c"
     }
 }
