stub pass that compiles and is part of pass pipeline. Just prints function names.

--- a/lib/llvmopencl/CMakeLists.txt
+++ b/lib/llvmopencl/CMakeLists.txt
@@ -84,7 +84,9 @@ set(LLVMPASSES_SOURCES "AllocasToEntry.cc"
                        "WorkitemHandlerChooser.cc"
                        "WorkitemHandlerChooser.h"
                        "WorkitemLoops.cc"
-                       "WorkitemLoops.h")
+                       "WorkitemLoops.h"
+                       "SimpleFallback.cc"
+                       "SimpleFallback.h")
 
 if (ENABLE_REMOTE_SERVER)
   list(APPEND LLVMPASSES_SOURCES "SVMOffset.cc")
