stub for lib function that is called from kernel

--- a/lib/kernel/CMakeLists.txt
+++ b/lib/kernel/CMakeLists.txt
@@ -187,7 +187,8 @@ vload_half.cl
 vstore.cl
 vstore_half.cl
 vload_store_half_f16c.c
-wait_group_events.cl)
+wait_group_events.cl
+fallback_scheduler.c)
 
 #*********************************************************************
 
