starting with context save

--- a/lib/kernel/CMakeLists.txt
+++ b/lib/kernel/CMakeLists.txt
@@ -188,7 +188,7 @@ vstore.cl
 vstore_half.cl
 vload_store_half_f16c.c
 wait_group_events.cl
-fallback_scheduler.c)
+wgf_fallback_support.c)
 
 #*********************************************************************
 
