--- a/lib/kernel/host/CMakeLists.txt
+++ b/lib/kernel/host/CMakeLists.txt
@@ -140,7 +140,7 @@ vstore_half.cl
 wait_group_events.cl
 work_group.c
 write_image.cl
-#fallback_scheduler.c
+wgf_fallback_support.c
 
 ###################################################################
 
