sub_group_barrier pseudofunction is linked to kernel lib, successfully removed in removeBarriercalls

--- a/lib/kernel/CMakeLists.txt
+++ b/lib/kernel/CMakeLists.txt
@@ -188,7 +188,8 @@ vstore.cl
 vstore_half.cl
 vload_store_half_f16c.c
 wait_group_events.cl
-wgf_fallback_support.c)
+wgf_fallback_support.c
+subgroupbarrier.ll)
 
 #*********************************************************************
 
