--- a/lib/kernel/host/CMakeLists.txt
+++ b/lib/kernel/host/CMakeLists.txt
@@ -141,6 +141,7 @@ wait_group_events.cl
 work_group.c
 write_image.cl
 wgf_fallback_support.c
+subgroupbarrier.ll
 ###################################################################
 
 # from libclc
