llvmopencl: Refactor barrier implementation
Introduce sub-group barriers by refactoring 'Barrier' into a base
class for 'WorkgroupBarrier' and 'SubgroupBarrier'. The new
'WorkgroupBarrier' is semantically identical to the old 'Barrier'.

Previously sub-group barriers were treated as work-group barriers,
which caused issues with diverging sub-groups. This refactor
explicitly differentiates the two barrier types, enabling proper
handling of control flow for diverging sub-groups.

Currently, work-group methods still treat sub-group barriers as
work-group barriers since the logic is based on identifying
'barriers'. This refactor lays the groundwork for correctly
addressing sub-group barriers in work-group methods.

Additionally, add "pseudo"-function declaration for the sub-group
barrier.

--- a/lib/kernel/host/CMakeLists.txt
+++ b/lib/kernel/host/CMakeLists.txt
@@ -242,9 +242,9 @@ sleef-pocl/trunc.cl
 )
 
 if(KERNEL_TRIPLE_TARGETS_MSVC_TOOLCHAIN)
-  list(APPEND SOURCES_WITH_SLEEF barrier-msvc.ll)
+  list(APPEND SOURCES_WITH_SLEEF workgroup_barrier-msvc.ll)
 else()
-  list(APPEND SOURCES_WITH_SLEEF barrier.ll)
+  list(APPEND SOURCES_WITH_SLEEF workgroup_barrier.ll)
 endif()
 
 if(HOST_CPU_ENABLE_CL_KHR_FP16)
